--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
             <version>2.3.5</version>
         </dependency>
 
+        <!-- Swagger Config-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <!-- Swagger UI -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
 
